--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-permalink:aditechptro.unaux.com/404.html
+permalink: /404.html
 ---
 <!DOCTYPE html>
 <html>
@@ -45,7 +45,7 @@ permalink:aditechptro.unaux.com/404.html
 		  </a>
 		  <figcaption class="text-center">
 		  <span class="font-weight-bold">404 - This page doesn't exist... ¯\_(ツ)_/¯</span> <br/>
-		  <a href="https://aditechptro.unaux.com/">Try going home?<a> <br/>
+		  <a href="http://aditechptro.unaux.com/">Try going home?<a> <br/>
 		  [or click the image for a <span class="font-italic">happier</span> video]</figcaption>
 		</figure>
     </div>
