--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="img/resume.pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="ResumeView.html">Resume</a>
           </li>
         </ul>
       </div>
@@ -244,7 +244,7 @@
 			
 	<!-- Fun stuff includes links to Mountain Biking, Skiing and Spotify playlists -->
 	<div class="col-lg-4 col-sm-6 text-center">
-    <a class="href-black" href="http://www.aditechptro.unaux.com/beauty-odisha">
+    <a class="href-black" href="httsp://www.aditechptro.unaux.com/Beauty-Odisha">
 	    <img src="img/portfolio/thumbnails/odpl.jpg" 
 	         class="img-fluid images-border"
            alt="Beauty of ODISHA"> 
@@ -253,7 +253,7 @@
         </div>
 			
         <div class="col-lg-4 col-sm-6 text-center">
-          <a class="href-black" href="http://www.aditechptro.unaux.com/trekking">
+          <a class="href-black" href="https://www.aditechptro.unaux.com/Trekking">
             <img src="img/portfolio/thumbnails/trekking.jpg" 
                  class="img-fluid images-border-skiing" 
                  alt="TREKKING!">
@@ -262,7 +262,7 @@
         </div>
 				
         <div class="col-lg-4 col-sm-6 text-center">
-          <a class="href-black" href="http://www.aditechptro.unaux.com/spotifymusic">
+          <a class="href-black" href="https://www.aditechptro.unaux.com/Spotify-WalkSite">
             <img src="img/portfolio/thumbnails/spotify.png" 
                  class="img-fluid"
                  alt="Spotify Playlists!">
