--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
   <!-- Custom favicon -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <!-- Appzi: Capture Insightful Feedback -->
+  <script async src="https://w.appzi.io/w.js?token=aGf4C"></script>
 
   <!-- Google Analytics Tracking Tag. Track how people access my site and such.
        (assuming they don't block ads or whatever from Google) -->
